# genesis-rl

./: .gitignore  Makefile  README.md  plots.ipynb  pyproject.toml
ppo_genesis_tensorboard/PPO_1/: events.out.tfevents.1762727443.rodrigo-pc.225575.0
ppo_genesis_tensorboard/PPO_2/: events.out.tfevents.1762727478.rodrigo-pc.226144.0
ppo_genesis_tensorboard/PPO_3/: events.out.tfevents.1762727526.rodrigo-pc.226829.0
ppo_genesis_tensorboard/PPO_4/: events.out.tfevents.1762727664.rodrigo-pc.228655.0
src/: main.py
src/algorithms/: __init__.py  ddpg.py  early_stopping.py  off_policy_runner.py  replay_buffer.py  sac.py  td3.py
src/algorithms/a_star/: __init__.py  a_star.py
src/algorithms/dwa/: __init__.py  dwa_config.py  dwa_planner.py
src/algorithms/ppo/: ppo.py
src/configs/: __init__.py  algorithm_config.py  env_config.py  seed.py
src/genesis_mobile_robot/: __init__.py  env_diff_drive.py  map_generator.py  metrics.py  scene_1.py  train_ppo.py
src/go2/: __init__.py  ddpg_eval.py  ddpg_train.py  eval_sac_custom.py  go2_env.py  go2_eval.py  go2_eval_teleop.py  go2_sb3_env.py  go2_sb3_eval.py  go2_sb3_train.py  go2_train.py  ppo_eval.py  ppo_train.py  sac_eval.py  sac_train.py  td3_eval.py  td3_train.py  train_ddpg_custom.py  train_sac_custom.py  train_td3_custom.py  video_overlay.py  view_env.py
src/go2/rsl_lib/: baseline_eval.py  baseline_train.py  example_go2_eval.py  example_go2_train.py  ppo_eval.py  ppo_optuna.py  ppo_train.py
src/go2/sb3/: ddpg_eval.py  ddpg_train.py  sac_optuna.py  td3_eval.py  td3_optuna.py  td3_train.py
src/helpers/: __init__.py  callback.py  extract_metrics.py
src/scenes/: scene_1.py
xml/mobile_base/: diff_drive.xml
