[project]
name = "genesis-rl"
version = "0.1.0"
description = "Projeto desenvolvido para a materia de Aprendizado por Reforco - UFMG - DCC 2025.2"
authors = [
    {name = "Rodrigo Santos da Silva",email = "rodrigo.silva@dcc.ufmg.br"},{name = "Bruno Lemos de Lima", email = "brunos.lemos@dcc.ufmg.br"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "imageio (>=2.37.2,<3.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "genesis-world (>=0.3.7,<0.4.0)",
    "torch (>=2.9.1,<3.0.0)",
    "rsl-rl-lib (==2.2.4)",
    "stable-baselines3 (>=2.7.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false